Stop photos being too big to see in landscape

--- a/css/main.css
+++ b/css/main.css
@@ -171,6 +171,7 @@ address {
 iframe,
 img {
   max-width: 100%;
+  max-height: 80vh;
 }
 
 /* Links */
